--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://kit.fontawesome.com/0f3fc260a1.js" crossorigin="anonymous"></script>
     <title>React App</title>
     <link href="/dist/output.css" rel="stylesheet">
   </head>
